--- a/.vrapperrc
+++ b/.vrapperrc
@@ -2,6 +2,20 @@
 :set smartcase
 
 
+nnoremap <Space>w :w<CR>
+nnoremap <CR> G
+
+vmap <Space>y "+y
+vmap <Space>d "+d
+nmap <Space>p "+p
+nmap <Space>P "+P
+vmap <Space>p "+p
+vmap <Space>P "+P
+
+
+" Reset Highlight
+nnoremap <Esc><Esc> :noh<CR>
+
 "カーソル位置の単語をyankする
 nnoremap vv vawy
 
@@ -29,13 +43,6 @@ inoremap <c-k> <Up>
 inoremap <c-h> <Left>
 inoremap <c-l> <Right>
 
-" 引用符, 括弧の設定
-"inoremap { {}<Left>
-"inoremap [ []<Left>
-"inoremap ( ()<Left>
-"inoremap " ""<Left>
-"inoremap ' ''<Left>
-inoremap <> <><Left>
 
 " コマンドモード
 cnoremap <c-f> <Right>
@@ -45,24 +52,15 @@ cnoremap <c-e> <c-e>
 cnoremap <c-u> <c-e><c-u>
 cnoremap <c-v> <c-f>a
 
-" vimgrep
-nnoremap [q :cprevious<CR>   " 前へ
-nnoremap ]q :cnext<CR>       " 次へ
-nnoremap [Q :<C-u>cfirst<CR> " 最初へ
-nnoremap ]Q :<C-u>clast<CR>  " 最後へ
 
-autocmd QuickFixCmdPost *grep* cwindow
 "srで参照をプロジェクトから検索
 eclipseaction SearchRef  org.eclipse.jdt.ui.edit.text.java.search.references.in.project
-noremap sr :SearchRef<C-m>
+noremap sr :SearchRef<CR>
 
-"<space>j, <space>kで画面送り
-noremap <Space>j <C-f>
-noremap <Space>k <C-b>
 
 "最後に編集された位置に移動
 eclipseaction GoLastEditPosition org.eclipse.ui.edit.text.gotoLastEditPosition
-nnoremap gb :GoLastEditPosition<C-m>
+nnoremap gb :GoLastEditPosition<CR>
 
 "対応する括弧に移動
 nnoremap [ %
@@ -71,9 +69,9 @@ nnoremap ] %
 
 "次のメンバ(フィールド,メソッド)
 eclipseaction GoNextMember org.eclipse.jdt.ui.edit.text.java.goto.next.member
-nnoremap mm :GoNextMember<C-m>
+nnoremap mm :GoNextMember<CR>
 eclipseaction GoPrevMember org.eclipse.jdt.ui.edit.text.java.goto.previous.member
-nnoremap mp :GoPrevMember<C-m>
+nnoremap mp :GoPrevMember<CR>
 
 "IME
 set imd
