--- a/.vrapperrc
+++ b/.vrapperrc
@@ -1,70 +1,16 @@
-:set ignorecase
-:set smartcase
+set ignorecase
+set smartcase
 
-
-nnoremap <Space>w :w<CR>
-nnoremap <CR> G
-
-vmap <Space>y "+y
-vmap <Space>d "+d
-nmap <Space>p "+p
-nmap <Space>P "+P
-vmap <Space>p "+p
-vmap <Space>P "+P
-
-
-" Reset Highlight
-nnoremap <Esc><Esc> :noh<CR>
-
-"カーソル位置の単語をyankする
-nnoremap vv vawy
-
-"最後に変更されたテキストを選択する
-nnoremap gc  `[v`]
-vnoremap gc ;<C-u>normal gc<Enter>
-onoremap gc ;<C-u>normal gc<Enter>
-
-"  Insert mode中で単語単位/行単位の削除をアンドゥ可能にする
-inoremap <C-u>  <C-g>u<C-u>
-inoremap <C-w>  <C-g>u<C-w>
-
-" 文頭・文末への移動
-nnoremap <Space>h ^
-nnoremap <Space>l $
-vnoremap <Space>h ^
-vnoremap <Space>l $
-
-" 改行を入れる
-nnoremap <c-j> i<CR><Esc>
-
-" 挿入モードでのカーソル移動
-inoremap <c-j> <Down>
-inoremap <c-k> <Up>
-inoremap <c-h> <Left>
-inoremap <c-l> <Right>
-
-
-" コマンドモード
-cnoremap <c-f> <Right>
-cnoremap <c-b> <Left>
-cnoremap <c-a> <c-b>
-cnoremap <c-e> <c-e>
-cnoremap <c-u> <c-e><c-u>
-cnoremap <c-v> <c-f>a
-
+" 基本のkeymap
+source  $HOME/.vimrc_base_map
 
 "srで参照をプロジェクトから検索
 eclipseaction SearchRef  org.eclipse.jdt.ui.edit.text.java.search.references.in.project
 noremap sr :SearchRef<CR>
 
-
 "最後に編集された位置に移動
 eclipseaction GoLastEditPosition org.eclipse.ui.edit.text.gotoLastEditPosition
 nnoremap gb :GoLastEditPosition<CR>
-
-"対応する括弧に移動
-nnoremap [ %
-nnoremap ] %
 
 
 "次のメンバ(フィールド,メソッド)
