--- a/.vrapperrc
+++ b/.vrapperrc
@@ -2,7 +2,7 @@ set ignorecase
 set smartcase
 
 " 基本のkeymap
-source  $HOME/.vimrc_base_map
+source  ~/.vimrc_base_map
 
 "srで参照をプロジェクトから検索
 eclipseaction SearchRef  org.eclipse.jdt.ui.edit.text.java.search.references.in.project
