--- a/.vrapperrc
+++ b/.vrapperrc
@@ -4,6 +4,9 @@ set smartcase
 " 基本のkeymap
 source  ~/.vimrc_base_map
 
+" まるでUnite
+noremap <C-n> :files<CR>
+
 "srで参照をプロジェクトから検索
 eclipseaction SearchRef  org.eclipse.jdt.ui.edit.text.java.search.references.in.project
 noremap sr :SearchRef<CR>
