--- a/.gitconfig
+++ b/.gitconfig
@@ -1,12 +1,40 @@
 [alias]
-        # いい感じのグラフでログを表示
-    graph = log --graph --date=short --decorate=short --pretty=format:'%Cgreen%h %Creset%cd %Cblue%cn %Cred%d %Creset%s'
-        # 上の省略形
-    gr = log --graph --date=short --decorate=short --pretty=format:'%Cgreen%h %Creset%cd %Cblue%cn %Cred%d %Creset%s'
     st = status
     cm = commit
     co = checkout
-        # Untracked filesを表示せず，not stagedと，stagedだけの状態を出力する
+    # Untracked filesを表示せず，not stagedと，stagedだけの状態を出力する
     stt = status -uno
-        # 行ごとの差分じゃなくて，単語レベルでの差分を色付きで表示する
+    # 行ごとの差分じゃなくて，単語レベルでの差分を色付きで表示する
     difff = diff --word-diff
+    #https://github.com/gggritso/dotfiles/blob/master/gitconfig.symlink より
+    unstage = reset -q HEAD --
+    discard = checkout --
+    nevermind = !git reset --hard HEAD && git clean -d -f
+    uncommit = reset --mixed HEAD~
+    save = commit -m
+    resave = commit --amend
+    invert = revert
+    last = log -1 HEAD --format=format:"%Cred%H"
+    summary = status -u -s
+    graph = log --graph -10 --branches --remotes --tags  --format=format:'%Cgreen%h %Creset• %<(75,trunc)%s (%cN, %ar) %Cred%d' --date-order
+    history = log -10 --format=format:'%Cgreen%h %Creset• %s (%cN, %ar)'
+    branchout = checkout -b
+    tags = tag
+    branches = branch -a
+    stashes = stash list
+    remotes = remote -v
+    prestage = diff -w --word-diff=color
+    precommit = diff --cached -w --word-diff=color --word-diff-regex='[^[:space:]<>]+'
+    move = mv
+    remove = rm
+    unmerged = branch --no-merged
+    unstash = stash pop
+    what = show -w
+    untrack = rm -r --cached
+    rewrite = rebase -i
+    amend = commit --amend
+    back = checkout "-"
+    contributors = shortlog -s -n
+    filetrail = log --follow -p -w
+    mergetrail = log --ancestry-path --merges
+    unmerged = diff --name-only --diff-filter=U
